# LinuxSSH_MCP

./: .env.example  .gitignore  diagnose_mcp.py  main.py  pyproject.toml  readme.md  requirements.txt  项目使用文档.md  项目解析文档.md
docs/SSH-MCP-001/: FINAL_SSH-MCP-001.md  TODO_SSH-MCP-001.md
linux_ssh_mcp/: __init__.py  __main__.py  auth_manager.py  cache_manager.py  config_manager.py  connection_pool.py  constants.py  directory_manager.py  exceptions.py  file_transfer_manager.py  logger.py  mcp_server.py  security.py  settings.py  ssh_manager.py  token_optimizer.py  types.py
tests/: test_auth_manager.py  test_cache_manager.py  test_config_manager.py  test_connection_pool.py  test_directory_manager.py  test_exceptions.py  test_file_transfer_manager.py  test_mcp_server.py  test_security.py  test_ssh_manager.py  test_stdio_transport.py  test_token_optimizer.py  test_trae_mcp_bootstrap.py
